--- a/src/index.scss
+++ b/src/index.scss
@@ -9,12 +9,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;;
+  justify-content: center;
   margin: 0;
   background: map-get($colors, primary);
 }
 
 #root {
+  width: 100%;
   max-width: 1920px;
   padding: 3rem 10rem;
   display: flex;
@@ -23,6 +24,7 @@ body {
   justify-content: center;
   gap: 5rem;
   font-family: "Comfortaa", sans-serif;
+  box-sizing: border-box;
 }
 
 h1,
@@ -115,7 +117,7 @@ svg {
   #root
   {
     gap: 3rem;
-    padding: 2rem 5rem;
+    padding: 2rem;
   }
 
   h1 {
